Fix task to change user shell

--- a/roles/post_install/tasks/main.yml
+++ b/roles/post_install/tasks/main.yml
@@ -6,4 +6,5 @@
 - name: Set default shell
   user:
     name: "{{ user }}"
-    shell: "{{ shell_path }}"
+    shell: "{{ shell_path.stdout }}"
+  become: yes
