Remove keybase not updated to M1

--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -13,7 +13,7 @@ packages:
 casks:
   - firefox
   - iterm2
-  - keybase
+    #  - keybase # Not installable on M1 via homebrew yet
   - pocket-casts
   - spotify
   - whatsapp
