--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,9 +1,4 @@
 ---
-- name: User Config
-  import_tasks: user.yml
-
-- name: Diff Tool Config
-  import_tasks: diff.yml
-
-- name: Authentication Config
-  import_tasks: auth.yml
+- import_tasks: user.yml
+- import_tasks: diff.yml
+- import_tasks: auth.yml
