Auto sign all commits

--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
-- import_tasks: user.yml
-- import_tasks: diff.yml
 - import_tasks: auth.yml
+- import_tasks: commit.yml
+- import_tasks: diff.yml
+- import_tasks: user.yml
