--- a/roles/install_applications/tasks/others.yml
+++ b/roles/install_applications/tasks/others.yml
@@ -4,8 +4,16 @@
     - name: Check if oh-my-zsh is installed
       stat:
         path: "{{ home }}/.oh-my-zsh"
-        register: omz
+      register: omz
 
     - name: Download and run oh-my-zsh installer
-      command: 'sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended'
+      block:
+        - get_url:
+            url: https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh
+            dest: /tmp/install_oh_my_zsh.sh
+            mode: u=rwx,g=rx,o=rx
+
+        - script:
+            cmd: /tmp/install_oh_my_zsh.sh --unattended
+            executable: /bin/sh
       when: not omz.stat.exists
