Adds scroll reverser to casks

--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -15,5 +15,6 @@ casks:
   - iterm2
     #  - keybase # Not installable on M1 via homebrew yet
   - pocket-casts
+  - scroll-reverser
   - spotify
   - whatsapp
