--- a/roles/gopass/tasks/main.yml
+++ b/roles/gopass/tasks/main.yml
@@ -8,9 +8,11 @@
       autoclip: true
       autoimport: true
       cliptimeout: 45
+      exportkeys: true
       nocolor: false
       nopager: false
       notifications: true
       parsing: true
       path: {{ home }}/.password-store
+      safecontent: false
       mounts: {}
