Adds github cli and virtualbox

--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -1,6 +1,7 @@
 packages:
   - direnv
   - gawk
+  - gh
   - gnu-sed
   - gnupg
   - gopass
@@ -21,4 +22,5 @@ casks:
   - scroll-reverser
   - slack
   - spotify
+  - virtualbox
   - whatsapp
