Fix path for vimrc indentation

--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -48,7 +48,7 @@
 
 - name: Indentation
   blockinfile:
-    path: "{{ zshrc }}"
+    path: "{{ vimrc }}"
     marker: "\" {mark} INDENTATION"
     block: |
       set expandtab
