Adds parallels cask

--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -18,6 +18,7 @@ casks:
   - firefox
   - iterm2
     #  - keybase # Not installable on M1 via homebrew yet
+  - parallels
   - pocket-casts
   - scroll-reverser
   - slack
