--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -4,6 +4,7 @@ packages:
   - gh
   - gnu-sed
   - gnupg
+  - golang
   - gopass
   - pinentry-mac
   - pyenv
@@ -16,6 +17,7 @@ packages:
 
 casks:
   - firefox
+  - gpg-suite
   - iterm2
     #  - keybase # Not installable on M1 via homebrew yet
   - pocket-casts
