--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -19,6 +19,7 @@ packages:
 casks:
   - firefox
   - bettertouchtool
+  - deezer
   - gpg-suite
   - iterm2
     #  - keybase # Not installable on M1 via homebrew yet
