Creates macos specific role. Adds postman cask

--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -25,6 +25,7 @@ casks:
   - iterm2
     #  - keybase # Not installable on M1 via homebrew yet
   - pocket-casts
+  - postman
   - scroll-reverser
   - slack
   - spotify
