Enables docker-compose oh-my-zsh plugin

--- a/roles/zsh/tasks/oh-my-zsh.yml
+++ b/roles/zsh/tasks/oh-my-zsh.yml
@@ -25,6 +25,7 @@
             brew
             copybuffer
             docker
+            docker-compose
             emoji
             gitignore
             httpie
