--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -33,3 +33,14 @@ casks:
   - stremio
   - visual-studio-code
   - whatsapp
+
+vscode_extensions:
+  - eamodio.gitlens
+  - ms-azuretools.vscode-docker
+  - ms-python.python
+  - ms-toolsai.jupyter
+  - ms-toolsai.jupyter-keymap
+  - ms-toolsai.jupyter-renderers
+  - ms-vscode-remote.remote-containers
+  - rangav.vscode-thunder-client
+  - vscodevim.vim
