Adds pgcli, rectangle and signal

--- a/roles/install_applications/defaults/main.yml
+++ b/roles/install_applications/defaults/main.yml
@@ -8,6 +8,7 @@ packages:
   - gopass
   - httpie
   - jq
+  - pgcli
   - pinentry-mac
   - pipenv
   - pyenv
@@ -27,7 +28,9 @@ casks:
   - keybase
   - pocket-casts
   - postman
+  - rectangle
   - scroll-reverser
+  - signal
   - slack
   - spotify
   - stremio
